# projects

digital-europe-program/: .env  .env.example  .gitignore  README.md  docker-compose.yml  markup.md  plan.md  prd.md
omniaspa/: .env.sample  .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  README.md  pyproject.toml
omniaspa/data/: proposal_generator.db  proposal_generator.db # Path relative to project root
omniaspa/docs/: ARCHITECTURE.md
omniaspa/output/proposals/: proposal_for_test_content_fix_425a3a33-74c5-4e42-8738-09c18feb05eb_2025-04-07.md  proposal_for_test_persistence_fix_669b2303-a5ae-4d6f-b06c-8d4483737e34_2025-04-07.md  proposal_for_test_persistence_fix_c97f885c-2c5f-4076-8056-d23965e753e0_2025-04-07.md  proposal_for_your_own_ideas_based_on_current_knowledge_1ab98696-3d27-49dc-8f1d-3f427dc386d6_2025-04-07.md
omniaspa/specs/: agent_collaboration_framework.pseudo  agent_definitions.pseudo  iterative_workflow_engine.pseudo  local_database.pseudo  user_interface.pseudo
omniaspa/src/: __init__.py  cli.py  config.py  llm_integration.py
omniaspa/src/agents/: __init__.py  base_agent.py  creative_ideator.py  practical_judge.py  programme_expert.py  proposal_writer.py  startup_founder.py
omniaspa/src/data_storage/: __init__.py  sqlite_repository.py
omniaspa/src/models/: __init__.py  evaluation.py  idea.py  proposal.py
omniaspa/src/omniaspa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
omniaspa/src/workflow/: __init__.py  workflow_engine.py
omniaspa/tests/: __init__.py  test_agents.py  test_data_storage.py  test_models.py  test_workflow.py
(+58 files in other folders)
